--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "beyondcode/laravel-websockets": "^1.11",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "google/cloud-firestore": "^1.19",
         "guzzlehttp/guzzle": "^7.0.1",
-        "kreait/laravel-firebase": "^3.1",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
